--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/5W.svg" />
+    <link rel="icon" type="image/svg+xml" href="./images/5W.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>5amajik World</title>
   </head>
